Fixbug: distorted images

--- a/assets/css/gifts.css
+++ b/assets/css/gifts.css
@@ -158,6 +158,7 @@ div.watches {
 .img-fluid.plush-toys {
   height: 150px;
   width: auto;
+  object-fit: cover;
 }
 
 .flex {
